--- a/src/main/resources/static/css/schedulePopup.css
+++ b/src/main/resources/static/css/schedulePopup.css
@@ -1,5 +1,5 @@
 @charset "UTF-8";
-@import url('https://fonts.googleapis.com/css2?family=Noto+Sans+KR&display=swap%27);
+@import url('https://fonts.googleapis.com/css2?family=Noto+Sans+KR&display=swap%27');
 
 .modal-body {
     background: white;
